Fix: Default "spacing" is missing - inherit it from site setting (Layout > "space between widgets" - 20px by default) [ED-4997]

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -13,6 +13,7 @@
 	--z-index: auto;
 	--overflow: visible;
 	--transition: 0;
+	--gap: var( --widgets-spacing, 20px ); // Use the gap from `Site Settings` or default to 20px.
 
 	--overlay-mix-blend-mode: initial;
 	--overlay-opacity: 1;
